--- a/fixtures/02-dots-basic.yml
+++ b/fixtures/02-dots-basic.yml
@@ -1,13 +1,9 @@
-files:
-  gitconfig:
-    dst: out/gitconfig
-    os: all # all, linux, macos
-  zshrc:
-    dst: out/zshrc
-    typ: copy
-    os: linux
-    opts: # copy opts NYI
-files_opts:
-  dir: fixtures/
+# infer destination (goes to $HOME)
+# uses prefix
 
-# handle directories
+map:
+  gitconfig:
+  zshrc:
+    to: ~/.zshrc
+opt:
+  cd: fixtures/
