--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,16 +5,13 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        golang: ["oldstable", "stable"]
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "${{ matrix.golang }}"
+          go-version-file: go.mod
 
       - name: Build
         run: go build -v ./...
