ci: run mod tidy

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,8 @@ jobs:
           go-version-file: go.mod
 
       - name: Build
-        run: go build -v ./...
+        run: go mod tidy && go build -v ./...
 
       - name: Test
-        run: go test -v ./...
+        run: go mod tidy && go test -v ./...
 
